Initial translation support
Almost all strings are now translateable. Translations are loaded from JSON files in lang/. Making a non-English forum should now be easy without too much core modifications.

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>{% if title != 'Index' %}{{ title }} - {% endif %}{{ config.title }}</title>
-
-	<base href="/">
+	<title>{% if title != 'Home' %}{{ title }} - {% endif %}{{ config.title }}</title>
 
 	{# inline font styling - update from /static/css/fonts.css #}
 	<style>@font-face{font-family:"Open Sans";font-style:normal;font-weight:400;font-display:swap;src:local(""),url("fonts/open-sans-v34-400.woff2") format("woff2"),url("fonts/open-sans-v34-400.woff") format("woff")}@font-face{font-family:"Open Sans";font-style:normal;font-weight:700;font-display:swap;src:local(""),url("fonts/open-sans-v34-700.woff2") format("woff2"),url("fonts/open-sans-v34-700.woff") format("woff")}</style>
@@ -16,7 +14,7 @@
 	<link href="rss" type="application/atom+xml" rel="alternate">
 
 	{% if noindex %}<meta name="robots" content="noindex,nofollow">{% endif %}
-	<meta property="og:title" content="{% if title != 'Index' %}{{ title }} - {% endif %}{{ config.title }}">
+	<meta property="og:title" content="{% if title != 'Home' %}{{ title }} - {% endif %}{{ config.title }}">
 	<meta name="description" content="{{ config.description }}">
 	<meta property="og:description" content="{{ config.description }}">
 	<meta property="og:site_name" content="{{ config.title }}">
@@ -33,13 +31,13 @@
 		</td></tr>
 		<tr>
 			<td class="n2 nb menu">
-				<a href="./">Index</a><a href="faq">FAQ</a><a href="memberlist">Member list</a><a href="activeusers">Active users</a><a href="forum?time=604800">Latest posts</a><a href="search">Search</a>
+				<a href="./">{{ __("Home") }}</a><a href="faq">{{ __("FAQ") }}</a><a href="memberlist">{{ __("Member list") }}</a><a href="activeusers">{{ __("Active users") }}</a><a href="forum?time=604800">{{ __("Latest posts") }}</a><a href="search">{{ __("Search") }}</a>
 			</td>
 			<td class="n2 nb menu right">
 				{% if log %}
-					{{ userlink(userdata) }}{% if userdata.rank > 0 %}<a href="editprofile">Edit profile</a>{% endif %}{% if userdata.rank > 2 %}<a href="admin">Admin</a>{% endif %}<a href="login?action=logout">Log out</a>
+					{{ userlink(userdata) }}{% if userdata.rank > 0 %}<a href="editprofile">{{ __("Edit profile") }}</a>{% endif %}{% if userdata.rank > 2 %}<a href="admin">{{ __("Admin") }}</a>{% endif %}<a href="login?action=logout">{{ __("Log out") }}</a>
 				{% else %}
-					<a href="register">Register</a><a href="login">Log in</a>
+					<a href="register">{{ __("Register") }}</a><a href="login">{{ __("Log in") }}</a>
 				{% endif %}
 			</td>
 		</tr>
@@ -47,12 +45,12 @@
 	{# Only allow logging out using a POST form, to not have an endpoint
 		where people could be tricked into logging themselves out #}
 	<form action="login" method="post" name="logout">
-		<input type="hidden" name="action" value="Logout">
+		<input type="hidden" name="action" value="{{ __("Logout") }}">
 	</form>
 
 	{% if not nobreadcrumb %}
 		<div class="breadcrumb">
-			<a href="./">Main</a> &raquo;
+			<a href="./">{{ __("Home") }}</a> &raquo;
 			{% for url, title in breadcrumb %}<a href="{{ url }}">{{ title }}</a> &raquo; {% endfor %}
 			{{ title }}
 
@@ -66,7 +64,7 @@
 
 	{% if not nobreadcrumb %}
 		<div class="breadcrumb">
-			<a href="./">Main</a> &raquo;
+			<a href="./">{{ __("Home") }}</a> &raquo;
 			{% for url, title in breadcrumb %}<a href="{{ url }}">{{ title }}</a> &raquo; {% endfor %}
 			{{ title }}
 
