--- a/templates/components/threadpost.twig
+++ b/templates/components/threadpost.twig
@@ -18,33 +18,32 @@
 	<tr>
 		<td class="n1 topbar_1 topbar{{ post.u_id }}_1 nom">{{ userlink(post, 'u_') }}</td>
 
-		<td class="b n1 topbar_1 topbar{{ post.u_id }}_1 blkm nod clearfix">
+		<td class="n1 topbar_1 topbar{{ post.u_id }}_1 blkm nod clearfix">
 			{% if post.u_avatar %}
 				<img class="float-left" src="userpic/{{ post.u_id }}" style="margin-right:10px">
 			{% endif %}
 			{{ userlink(post, 'u_') }} <div class="sfont" style="margin-top:0.5em">{% if post.u_title %}{{ post.u_title | raw }}{% endif %}</div>
 		</td>
 
-		<td class="n1 topbar_2 topbar{{ post.u_id }}_2 sfont blkm clearfix">Posted on {{ post.date | date('Y-m-d H:i') }}
+		<td class="n1 topbar_2 topbar{{ post.u_id }}_2 sfont blkm clearfix">{{ __("Posted on %s", post.date | date('Y-m-d H:i')) }}
 			{%- if post.tid %}, in <a href="thread?id={{ post.tid }}">{{ post.ttitle }}</a>{% endif %}
 			{% if post.revision >= 2 %}
-				(edited {{ post.rev_date | date('Y-m-d H:i') }})
+				{{ __("(edited %s)", post.rev_date | date('Y-m-d H:i')) }}
 			{% endif %}
 
 			<span class="float-right">{% if post.id %}
-				<a href="thread?pid={{ post.id }}#{{ post.id }}">Link</a>
+				<a href="thread?pid={{ post.id }}#{{ post.id }}">{{ __("Link") }}</a>
 				{% if log %}
 					{% if post.minreply <= userdata.rank %}
-						| <a href="newreply?id={{ post.thread }}&pid={{ post.id }}">Quote</a>
+						| <a href="newreply?id={{ post.thread }}&pid={{ post.id }}">{{ __("Quote") }}</a>
 					{% endif %}
 					{% if post.u_id == userdata.id or userdata.rank > 3 %}
-						| <a href="editpost?pid={{ post.id }}">Edit</a>
+						| <a href="editpost?pid={{ post.id }}">{{ __("Edit") }}</a>
 					{% endif %}
 					{% if userdata.rank > 1 %}
-						| <a href="editpost?pid={{ post.id }}&delete">Delete</a>
+						| <a href="editpost?pid={{ post.id }}&delete">{{ __("Delete") }}</a>
 					{% endif %}
 				{% endif %}
-				| ID: {{ post.id }}
 			{% endif %}</span>
 		</td>
 	</tr>
@@ -52,8 +51,8 @@
 		<td class="n1 sfont sidebar sidebar{{ post.u_id }} nom">
 			{% if post.u_title %}{{ post.u_title | raw }}{% endif %}
 			{% if post.u_avatar %}<img src="userpic/{{ post.u_id }}">{% endif %}
-			<br>Posts: {{ post.u_posts }}<br>
-			<br>Joined: {{ post.u_joined | date('Y-m-d') }}<br>
+			<br>{{ __("Posts:") }} {{ post.u_posts }}<br>
+			<br>{{ __("Joined:") }} {{ post.u_joined | date('Y-m-d') }}<br>
 		</td>
 
 		<td class="n2 mainbar mainbar{{ post.u_id }}">{{ (header ~ post.text ~ signature) | postfilter }}</td>
