--- a/templates/components/threadpost_deleted.twig
+++ b/templates/components/threadpost_deleted.twig
@@ -1,11 +1,10 @@
 <table class="c1 threadpost" id="{{ post.id }}"><tr>
 	<td class="n1 topbar_1">{{ userlink(post, 'u_') }}</td>
 	<td class="n1 sfont topbar_2">
-		(post deleted)
+		{{ __("(post deleted)") }}
 		<span class="float-right">
 			{% if userdata.rank > 1 %}
-				<a href="editpost?pid={{ post.id }}&undelete">Undelete</a> |
+				<a href="editpost?pid={{ post.id }}&undelete">{{ __("Undelete") }}</a>
 			{% endif %}
-			ID: {{ post.id }}
 		</span></td>
 </tr></table>
