--- a/templates/editpost.twig
+++ b/templates/editpost.twig
@@ -1,16 +1,16 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Edit post" %}
+{% set title = __("Edit post") %}
 {% set noindex = true %}
 
 	{% block content %}
 {% if error %}
-	<p class="error">The following errors occured when trying to make a reply: <br>- {{ error | join('<br>- ') | raw }}</p>
+	<p class="error">{{ __("The following errors occurred when trying to make a reply:") }} <br>- {{ error | join('<br>- ') | raw }}</p>
 {% endif %}
 
 {% if action == 'Preview' %}
 	{{ threadpost(post) }}
 {% endif %}
 
-{{ postform('editpost?pid='~pid, 'Edit post', thread.title, message, false) }}
+{{ postform('editpost?pid='~pid, __("Edit post"), thread.title, message, false) }}
 	{% endblock %}
