--- a/templates/newreply.twig
+++ b/templates/newreply.twig
@@ -1,16 +1,16 @@
 {% extends "_layout.twig" %}
 
-{% set title = "New reply" %}
+{% set title = __("New reply") %}
 {% set noindex = true %}
 
 	{% block content %}
 {% if error %}
-	<p class="error">The following errors occured when trying to make a reply: <br>- {{ error | join('<br>- ') | raw }}</p>
+	<p class="error">{{ __("The following errors occurred when trying to make a reply:") }} <br>- {{ error | join('<br>- ') | raw }}</p>
 {% endif %}
 
 {% if action == 'Preview' %}
 	{{ threadpost(post) }}
 {% endif %}
 
-{{ postform('newreply?id='~id, 'New reply', thread.title, message, false) }}
+{{ postform('newreply?id='~id, __("New reply"), thread.title, message, false) }}
 	{% endblock %}
